resolve very ugly overflow

--- a/src/css/core.scss
+++ b/src/css/core.scss
@@ -993,7 +993,6 @@ h3 {
 	padding-top: 65px;
 
 	.wrapper {
-		width: 965px;
 		margin: 0 auto;
 	}
 	div {
@@ -1046,7 +1045,6 @@ hr {
 }
 
 .p_s {
-	width: 955px;
 	text-align: center;
 	margin: 30px auto 0;
 
